tests/regression/errors/basic/type_error_15.csd
// Type error test 15
sus number drip = 15
sus text tea = "string_15"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 15:", wrong)
